[DS-707] Unnecessary Boolean construction
git-svn-id: http://scm.dspace.org/svn/repo/dspace/trunk@5510 9c30dcfa-912a-0410-8fc2-9e0234be79fd